2005-03-20  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_in.c:
	Wait for the last known read sequence number to pass the request
	we're waiting for, instead of checking whether data has arrived
	for the current request. Causes null to be returned if somebody
	screwed up by expecting a reply when none can come; relied on by
	new Xlib/XCB bits that intentionally and routinely screw up this
	way because the API doesn't give them enough information.

	* src/xcb_list.c, src/xcbint.h:
	Add _xcb_list_peek_head so Xlib doesn't have to repeatedly
	remove and re-insert the item at the head of its new
	pending_requests queue. Profiling showed that was a significant
	performance hit for the above-mentioned patch and with this
	three-line function apps are actually usable again.

2004-11-26  Josh Triplett  <josh@freedesktop.org>

	* src/c-client.xsl:
	In do-request processing, use the existing num-parts variable
	rather than recalculating the same expression.

2004-11-26  Josh Triplett  <josh@freedesktop.org>

	* src/c-client.xsl:
	  * Add a list of known core types, and don't search all the
	    protocol descriptions for types in that list.  This
	    significantly shortens the processing time.
	  * Search for all definitions of a non-core type, not just the
	    first, in order to check for duplicate definitions.
	  * Add an error message for non-core types with no definitions
	    found.

2004-11-10  Josh Triplett  <josh@freedesktop.org>

	* src/c-client.xsl:
	Don't create a separate local variable for exprfields, and change
	an explicit xsl:for-each to an xsl:apply-templates.

2004-11-10  Josh Triplett  <josh@freedesktop.org>

	* src/c-client.xsl:
	Prefix variables in request functions with "xcb_" to avoid
	collisions with field names.

2004-11-09  Josh Triplett  <josh@freedesktop.org>

	* src/c-client.xsl:
	* src/xcb_out.c:
	* src/xcbext.h:
	More API changes: Put constant request-specific data into a static
	const structure in each request function.
